Update text to inform users about password length in input.

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
       <div class="card-body">
         <textarea readonly id="password" placeholder="Your Secure Password" aria-label="Generated Password"></textarea>
       </div>
-      <input class="input" id="userInput" type="text" style="height: 50px;width: 100%;font-size: 20px;" placeholder="Enter desired password">
+      <input class="input" id="userInput" type="text" style="height: 50px;width: 100%;font-size: 20px;" placeholder="Enter desired password length between 8 and 128 characters">
       <label class="checkbox">
         Which character types do you want in your password? <br />
         <input type="checkbox" name="yesUpperAlphabet" value="checked">
