--- a/index.html
+++ b/index.html
@@ -8,12 +8,12 @@
   <title>Password Generator</title>
   <script src="https://code.jquery.com/jquery-3.5.1.min.js"
     integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.1/css/bulma.min.css">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.1/css/bulma.min.css">
   <link rel="stylesheet" href="style.css" />
 </head>
 
 <body>
-</div>
+  </div>
   <div class="wrapper">
     <header>
       <h1>Password Generator</h1>
@@ -22,8 +22,9 @@
       <div class="card-body">
         <textarea readonly id="password" placeholder="Your Secure Password" aria-label="Generated Password"></textarea>
       </div>
-      <input class="input" id="userInput" type="text" style="height: 50px;width: 100%;font-size: 20px;" placeholder="Enter desired password length between 8 and 128 characters">
-      <label class="checkbox">
+      <input class="input" id="userInput" type="text" style="height: 50px;width: 100%;font-size: 20px;"
+        placeholder="Enter desired password length between 8 and 128 characters">
+      <label class="checkbox" style="width: 100%;">
         Which character types do you want in your password? <br />
         <input type="checkbox" name="yesUpperAlphabet" value="checked">
         Uppercase letters<br />
@@ -40,43 +41,39 @@
         <input type="checkbox" name="yesSymbols" value="checked">
         Symbols
       </label>
-     
     </div>
     <button id="generate" class="btn">Generate Password</button>
   </div>
   <div class="card-footer">
-
-  </div>
-  </div>
   </div>
   <div class="modal" id="charAmountTooLow">
     <div class="modal-background"></div>
     <div class="modal-content is-clipped">
-        <div class="modal-card is-warning">
-            <header class="modal-card-head has-background-danger">
-                <p class="modal-card-title">Error</p>
-                <button class="delete" id="closeModal1" aria-label="close"></button>
-            </header>
-            <section class="modal-card-body has-text-danger">
-                <div>Please choose more than 8 characters.</div>
-            </section>
-        </div>
-    </div>
-</div>
-<div class="modal" id="charAmountTooHigh">
-  <div class="modal-background"></div>
-  <div class="modal-content is-clipped">
       <div class="modal-card is-warning">
-          <header class="modal-card-head has-background-danger">
-              <p class="modal-card-title">Error</p>
-              <button class="delete" id="closeModal2" aria-label="close"></button>
-          </header>
-          <section class="modal-card-body has-text-danger">
-              <div>Please choose less than 128 characters.</div>
-          </section>
+        <header class="modal-card-head has-background-danger">
+          <p class="modal-card-title">Error</p>
+          <button class="delete" id="closeModal1" aria-label="close"></button>
+        </header>
+        <section class="modal-card-body has-text-danger">
+          <div>Please choose more than 8 characters.</div>
+        </section>
       </div>
+    </div>
   </div>
-  <script src="script.js"></script>
+  <div class="modal" id="charAmountTooHigh">
+    <div class="modal-background"></div>
+    <div class="modal-content is-clipped">
+      <div class="modal-card is-warning">
+        <header class="modal-card-head has-background-danger">
+          <p class="modal-card-title">Error</p>
+          <button class="delete" id="closeModal2" aria-label="close"></button>
+        </header>
+        <section class="modal-card-body has-text-danger">
+          <div>Please choose less than 128 characters.</div>
+        </section>
+      </div>
+    </div>
+    <script src="script.js"></script>
 </body>
 
 </html>
